Implementado el reporte de ganancias por cada producto y por fecha, ademas los signos de peso en los dashboard admin y empleado creo  - Rama Juan Garces